--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "node": "20.17"
   },
   "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
   "keywords": [],
